--- a/rick-n-morty/src/App.css
+++ b/rick-n-morty/src/App.css
@@ -2,42 +2,14 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 img {
+  height: 50px;
+  width: 50px;
+  margin-left: 10px;
+}
+
+/* MY CSS STARTS HERE */
+.rick-n-morty-icon {
   height: 170px;
   width: 230px;
 }
@@ -45,4 +17,28 @@ img {
 .card-container {
   border: 1px solid lawngreen;
   border-width: 40px;
+}
+
+.character-img {
+  height: 230px;
+  width: 230px;
+}
+
+/* DARK MODE CSS */
+.dark-mode {
+  color: #fff;
+  background-color: #313843;
+}
+
+/* NAVBAR CSS */
+.navbar {
+  align-items: center;
+  border-bottom: 1px solid rgb(221, 221, 221);
+  display: flex;
+  height: 70px;
+  padding: 0 3%;
+  -webkit-box-shadow: 0px 2px 15px -8px rgba(0, 0, 0, 0.42);
+  -moz-box-shadow: 0px 2px 15px -8px rgba(0, 0, 0, 0.42);
+  box-shadow: 0px 2px 15px -8px rgba(0, 0, 0, 0.42);
+  margin-bottom: 20px;
 }
